# Llama-GPU

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AI_README.md  AI_UPGRADE_MANIFEST.md  AI_UPGRADE_STATUS.md  AI_UPGRADE_TODO.md  CHANGELOG.md  CHAT_INTERFACE_README.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_REFACTORED.md  DESKTOP_APP_SETUP_COMPLETE.md  FEATURES_COMPLETE.md  GUI-SETUP-COMPLETE.md  GUI_DEVELOPMENT_PLAN.md  IMPLEMENTATION_GAP_ANALYSIS.md  INTEGRATION_TODO.md  LICENSE  MANIFEST.in  Makefile  README.md  REQUIREMENTS_REFACTORED.md  RUNTIME_ERROR_ANALYSIS.md  RUNTIME_TESTING_COMPLETE.md  SUDO_TODO_CHECKLIST.md  TESTING_GUIDE.md  advanced_amd_setup.sh  ai-assistant.desktop  amd_gpu_monitor.py  autoport_fastapi.py  autoport_test.py  cleanup_temp_files.py  debug_server.py  demo_llama_with_knowledge.py  docker-compose.yml  final_runtime_test.py  http_test.py  (+32 more)
_organized/: .gitignore  POST_REORGANIZATION_ACTIONS.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  migrate.sh  pyproject.toml  requirements.txt
_organized/archive/legacy-docs/: API_REFACTORED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  RELEASE_NOTES.md
_organized/archive/temp-files/temp_backup/: CLEANUP_LOG.md  DOCUMENTATION_VERIFICATION_TODO.md  debug_output.txt  direct_test.py  run_tests.py
_organized/core/examples/: code_generation.py  conversation_simulation.py  document_classification.py  language_detection.py  question_answering.py  text_generation.py
_organized/core/scripts/: benchmark.py  deploy_cloud.sh  setup_aws.sh
_organized/core/src/llama_gpu/: __init__.py  advanced_inference.py  dashboard.py  deployment_templates.py  distributed_inference.py  edge_deploy.py  fine_tuning.py  llama_gpu.py  monitoring_alerts.py  multi_gpu.py  plugin_marketplace.py  plugin_marketplace_ui.py
_organized/core/src/llama_gpu/api/: async_server.py
_organized/core/src/llama_gpu/backend/: base.py  edge_deployment.py
_organized/core/src/llama_gpu/plugin_templates/: example_plugin.py  plugin_config.yaml
_organized/core/src/llama_gpu/static/js/: charts.js  plugins.js
_organized/core/src/llama_gpu/templates/: base.html
_organized/core/src/llama_gpu/templates/dashboard/: index.html
_organized/core/src/llama_gpu/utils/: aws_detection.py  batching.py  logging.py  memory.py  plugin_dependency.py  plugin_discovery.py  plugin_events.py  plugin_utils.py  quantization.py  role_manager.py
_organized/core/tests/: __init__.py  conftest.py  test_advanced_cache.py  test_advanced_inference.py  test_auth_manager.py  test_backend.py  test_config_manager.py  test_cpu_backend.py  test_cuda_backend.py  test_data_preprocessing.py  test_docs_examples.py  test_docs_public_methods.py  test_edge_deployment.py  test_edge_optimization.py  test_fine_tuning.py  test_integration.py  test_llama_gpu.py  test_logging.py  test_monitor_resources.py  test_multi_gpu.py  test_multi_gpu_api.py  test_quantization.py  test_quantization_api.py  test_role_manager.py  test_role_manager_integration.py  test_role_manager_new.py  test_setup_scripts.py
_organized/docs/guides/: CONTRIBUTOR_WELCOME.md  api.md  api_docs_automation.md  benchmarks.md  env_config.md  interactive_notebooks.md  role_manager_api.md  scripts.md  security_analytics_plan.md  troubleshooting.md  usage.md  video_tutorials.md
_organized/frontend/archive/project-tracker/: package.json
_organized/frontend/archive/project-tracker/src/components/Common/: NotificationCenter.css  NotificationCenter.js
_organized/frontend/archive/project-tracker/src/components/Layout/: Header.css  Sidebar.js
_organized/frontend/archive/project-tracker/src/context/: ProjectContext.js
_organized/frontend/main-interface/: README.md  package.json
_organized/frontend/main-interface/public/: electron.js  index.html  preload.js
_organized/frontend/main-interface/src/: App.js
_organized/frontend/main-interface/src/components/Common/: LoadingSpinner.js  NotificationSystem.js
_organized/frontend/main-interface/src/components/Layout/: Header.js
_organized/frontend/main-interface/src/components/Pages/: APIServer.js  Dashboard.js  MultiGPUConfig.js  PerformanceMonitor.js  QuantizationSettings.js
_organized/frontend/main-interface/src/context/: AppContext.js
_organized/tools/ci/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_organized/tools/ci/.github/ISSUE_TEMPLATE/: question.md
_organized/tools/ci/.github/workflows/: ci.yml  workflow.md
(+333 files in other folders)
